# D2SLAM

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  d2slam.code-workspace  docker_files_config.sh  start_docker.sh
d2comm/: CMakeLists.txt  package.xml
d2comm/launch/: d2comm.launch
d2comm/src/: d2comm.cpp  d2comm.h  d2comm_node.cpp
d2common/: CMakeLists.txt  package.xml
d2common/include/d2common/: d2baseframe.h  d2basetypes.h  d2frontend_types.h  d2imu.h  d2landmarks.h  d2pgo_types.h  d2state.hpp  d2vinsframe.h  fisheye_undistort.h  integration_base.h  utils.hpp
d2common/scripts/: quad_cam_split.py  undist_cv.py
d2common/src/: d2imu.cpp  d2pgo_types.cpp  d2vinsframe.cpp  test.cpp
d2common/src/solver/: ARock.cpp  BaseParamResInfo.cpp  BaseSolverWrapper.cpp  ConsensusSolver.cpp  SolverWrapper.cpp  consenus_factor.cpp  pose_local_parameterization.cpp
d2frontend/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml  pca.ipynb  superpoint.ipynb
d2frontend/include/d2frontend/: d2featuretracker.h  d2frontend.h  d2frontend_params.h  d2frontend_types.h  d2landmark_manager.h  d2landmarks.h  feature_matcher.h  fisheye_undistort.h  loop_cam.h  loop_detector.h  loop_net.h  mobilenetvlad_tensorrt.h  opticaltrack_utils.h  pnp_utils.h  tensorrt_generic.h  utils.h
d2frontend/launch/: node-sfisheye.launch  pc-outdoor-fisheye.launch  realsense.launch
d2frontend/launch/unused/: node-sfisheye.launch  nodelet-sfisheye.launch  pc-outdoor-fisheye.launch
d2frontend/scripts/: HFNet_server.py  HFNet_server_TF2.py
d2frontend/src/: d2featuretracker.cpp  d2frontend.cpp  d2frontend_node.cpp  d2frontend_nodelet.cpp  d2frontend_params.cpp  d2frontend_spy.cpp  d2landmark_manager.cpp  feature_matcher.cpp  loop_cam.cpp  loop_detector.cpp  loop_net.cpp  loop_utils.cpp  opticaltrack_utils.cpp  pnp_utils.cpp
d2frontend/src/CNN/: mobilenetvlad_tensorrt.cpp  moblienetvlad.cpp  netvlad_trt.cpp  onnx_generic.cpp  superglue_onnx.cpp  superpoint.cpp  superpoint_common.cpp  superpoint_onnx.cpp  superpoint_tensorrt.cpp  superpoint_trt.cpp  tensorrt_generic.cpp
d2frontend/tests/: camera_undistort_test.cpp  d2frontend_network_tester.cpp  d2frontend_test.cpp  loop_tensorrt_test.cpp
d2pgo/: CMakeLists.txt  package.xml
d2pgo/launch/: d2pgo.launch  d2pgo_test_multi.launch  d2pgo_test_single.launch
d2pgo/scripts/: debug_llt.ipynb  delay_launch_dpgo.bash  delay_launch_dpgo.sh  dpgo_DGS_eval.py  dpgo_bag_eval.py  dslam_simulate_comm.py  simulate_bdslam.py  simulate_bdslam_realworld.py  simulate_door_slam.py  simulate_utils.py
d2pgo/scripts/notebooks/: d2pgo_datagen.ipynb  d2pgo_param_searching.ipynb  debug_llt.ipynb  door_simluate.ipynb  evaluate_d2pgo.ipynb  param_searching_viz.ipynb  pgo_accuacy_viz.ipynb  pose_graph_evaluation_DGS.ipynb  pose_graph_viz.ipynb
d2pgo/scripts/pose_graph_partitioning/: Agent.py  Edge.py  Keyframe.py  decentralized_graph_partition.py  graph_partitioning.py  pose_graph.py  pose_graph_partitioning.py  tsp_dataset_generation.py  utils.py
d2pgo/src/: ARockPGO.cpp  ARockPGO.hpp  d2pgo.cpp  d2pgo.h  d2pgo_config.h  d2pgo_node.cpp  pgostate.hpp  rotation_initialization.hpp
d2pgo/src/rot_init/: rotation_initialization.cpp  rotation_initialization.hpp  rotation_initialization_arock.hpp  rotation_initialization_base.hpp
d2pgo/src/swarm_outlier_rejection/: swarm_outlier_rejection.cpp  swarm_outlier_rejection.hpp
d2pgo/test/: d2pgo_test.cpp  d2pgo_test.hpp  posegraph_g2o.cpp  posegraph_g2o.hpp  test_pgo.cpp
d2vins/: CMakeLists.txt  package.xml
d2vins/include/: d2vins_params.hpp
d2vins/include/d2vins/: d2imu.hpp  d2vins_params.hpp  d2vins_types.hpp  utils.hpp
d2vins/launch/: GRACO.launch  VIRAL.launch  debug.launch  gopro.launch  mono.launch  quadcam.launch  realsense.launch  tum.launch
d2vins/scripts/: margin_test.ipynb  quaternion_averaging.ipynb
d2vins/src/: d2imu.cpp  d2vins_node.cpp  d2vins_params.cpp  d2vins_params.hpp  d2vins_types.cpp
d2vins/src/MSCKF/: MSCKF.cpp  MSCKF.hpp  MSCKF_node.cpp  MSCKF_state.cpp  MSCKF_state.hpp
d2vins/src/estimator/: ParamResidualInfo.cpp  ParamResidualInfo.hpp  d2estimator.cpp  d2estimator.hpp  d2vinsstate.cpp  d2vinsstate.hpp  feature_manager.hpp  landmark_manager.cpp  landmark_manager.hpp  marginalize.cpp  marginalize.hpp  visualization.cpp  visualization.hpp
d2vins/src/factors/: ProjectionTwoDroneTwoCamFactor.cpp  ProjectionTwoDroneTwoCamFactor.h  consenus_factor.cpp  consenus_factor.h  depth_factor.h  imu_factor.h  integration_base.h  pose_local_parameterization.cpp  pose_local_parameterization.h  prior_factor.cpp  prior_factor.h  projectionOneFrameTwoCamFactor.cpp  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamDepthFactor.cpp  projectionTwoFrameOneCamDepthFactor.h  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameOneCamFactor.h  projectionTwoFrameOneCamFactorNoTD.h  projectionTwoFrameTwoCamFactor.cpp  projectionTwoFrameTwoCamFactor.h  projectionTwoFrameTwoCamFactorDistrib.cpp  projectionTwoFrameTwoCamFactorDistrib.h  reprojection3d.h
d2vins/src/network/: d2vins_net.cpp  d2vins_net.hpp
d2vins/src/utils/: solve_5pts.cpp  solve_5pts.h
d2vins/src/visualization/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  visualization.cpp  (+1 more)
quadcam_depth_est/: CMakeLists.txt  package.xml
quadcam_depth_est/include/: hitnet.hpp  quadcam_depth_est_trt.hpp  trt_buffers.h  virtual_stereo.hpp
quadcam_depth_est/launch/: depth-node.launch
quadcam_depth_est/models/: model_float32.onnx
quadcam_depth_est/src/: crestereo_onnx.hpp  hitnet.cpp  hitnet_onnx.hpp  pcl_utils.hpp  quadcam_depth_est.cpp  quadcam_depth_est.hpp  quadcam_depth_est_node.cpp  quadcam_depth_est_trt.cpp  virtual_stereo.cpp  virtual_stereo.hpp
quadcam_depth_est/test/: test_quadcam_depth_est.cpp
tensorrt_utils/: CMakeLists.txt
trt_omni_depth/: CMakeLists.txt  package.xml
trt_omni_depth/launch/: depth-node.launch
trt_omni_depth/src/: crestereo_tensorrt.py  hitnet_trt.cpp  hitnet_trt.hpp  pcl_utils.hpp  quadcam_depth_est.cpp  tensorrt_basic.cpp  tensorrt_basic.hpp  virtual_stereo.cpp
(+299 files in other folders)
