<?xml version="1.0"?>
<package format="2">
  <name>d2frontend</name>
  <version>0.0.0</version>
  <description>The frontend of D2SLAM</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="xuhao3e8@gmail.com">xuhao</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>L-GPLV3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>loop_fusion</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>swarm_msgs</build_export_depend>
  <build_export_depend>swarmcomm_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>d2common</build_export_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>swarm_msgs</exec_depend>
  <exec_depend>swarmcomm_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>d2common</exec_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>d2common</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <build_export_depend>rosmsg</build_export_depend>
  <exec_depend>rosmsg</exec_depend>
  <build_depend>rosmsg</build_depend>
  <build_depend>swarm_msgs</build_depend>
  <build_depend>swarmcomm_msgs</build_depend>
  <build_depend>camera_models</build_depend>
  <build_depend>nodelet</build_depend>
  <build_export_depend>camera_models</build_export_depend>
  <exec_depend>camera_models</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <build_depend>image_transport</build_depend>
  <build_export_depend>image_transport</build_export_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
   <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
